// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App__Footer with default 1`] = `
.emotion-3 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 24px 0;
  margin-top: 36px;
  border-top: 1px solid #eee;
  color: #767676;
  font-size: 12px;
}

.emotion-2 > ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-2 > ul > li {
  display: inline-block;
}

.emotion-2 > ul > li + li {
  margin-left: 10px;
}

.emotion-0 {
  padding: 0 8px;
  margin-right: 12px;
  line-height: 28px;
  vertical-align: middle;
  color: #ccc;
  font-size: 22px;
  font-family: 'Rajdhani',sans-serif;
  border: 1px solid #ccc;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  border-color: #4078c0;
}

<div
  className="emotion-3 emotion-4"
>
  <div
    className="emotion-2"
  >
    <ul>
      <li>
        © 2016 keik
      </li>
      <li>
        <a
          href="#"
        >
          Help
        </a>
      </li>
    </ul>
    <a
      className="emotion-0 emotion-1"
      href="#"
    >
      GH
    </a>
    <ul>
      <li>
        <a
          href="#"
        >
          API
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          About
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Home with default 1`] = `
.emotion-5 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-0 li {
  padding: 12px 0;
}

.emotion-0 li + li {
  border-top: 1px solid #f1f1f1;
}

.emotion-4 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-1 {
  padding: 12px;
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.emotion-3 {
  padding: 0;
  background-color: #fff;
}

.emotion-3 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-3 > table > tbody > tr:first-of-type td {
  border: none;
}

.emotion-3 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-2 li {
  padding: 12px 12px;
}

.emotion-2 li + li {
  border-top: 1px solid #f1f1f1;
}

<div
  className="emotion-5 emotion-6"
>
  <div
    style={
      Object {
        "display": "flex",
        "marginTop": "24px",
      }
    }
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <ul
        className="emotion-0"
      >
        <li>
          ACTIVITY_1
        </li>
        <li>
          ACTIVITY_2
        </li>
        <li>
          ACTIVITY_3
        </li>
      </ul>
    </div>
    <div
      style={
        Object {
          "marginLeft": "24px",
          "width": "320px",
        }
      }
    >
      <div
        className="emotion-4"
      >
        <div
          className="emotion-1"
        >
          Public Repositories
        </div>
        <div
          className="emotion-3"
        >
          <ul
            className="emotion-2"
          >
            <li>
              <i
                className="fa fa-folder-open-o"
              />
               
              <a
                href="/FULL_NAME1"
              >
                FULL_NAME1
              </a>
            </li>
            <li>
              <i
                className="fa fa-folder-open-o"
              />
               
              <a
                href="/FULL_NAME2"
              >
                FULL_NAME2
              </a>
            </li>
            <li>
              <i
                className="fa fa-folder-open-o"
              />
               
              <a
                href="/FULL_NAME3"
              >
                FULL_NAME3
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots New with default 1`] = `
.emotion-18 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-0 {
  margin: 0;
  font-size: 14px;
  color: #767676;
}

.emotion-2 {
  margin-bottom: 8px;
  display: block;
}

.emotion-2 > label {
  display: block;
  margin-bottom: 8px;
  font-weight: 600;
}

.emotion-4 {
  margin-bottom: 8px;
  display: inline-block;
}

.emotion-4 > label {
  display: block;
  margin-bottom: 8px;
  font-weight: 600;
}

.emotion-16 {
  display: inline-block;
  color: #fff;
  background-image: linear-gradient(#8add6d,#60b044);
  position: relative;
  padding: 6px 12px;
  border: 1px solid #5aad35;
  border-radius: 3px;
  font-size: 14px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-18 emotion-19"
>
  <div
    style={
      Object {
        "borderBottom": "1px solid #e5e5e5",
        "marginBottom": "32px",
        "marginTop": "24px",
        "paddingBottom": "8px",
      }
    }
  >
    <h2
      style={
        Object {
          "marginBottom": "0",
        }
      }
    >
      Create a new repository
    </h2>
    <p
      className="emotion-0 emotion-1"
    >
      A repository contains all the files for your project, including the revision history.
    </p>
  </div>
  <form
    action="/api/v1/user/repos"
    method="post"
    onSubmit={[Function]}
  >
    <input
      name="authenticity_token"
      type="hidden"
      value="TRUE"
    />
    <div>
      <div
        className="emotion-2 emotion-3"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <label
          htmlFor="owner"
        >
          Owner
        </label>
        <input
          id="owner"
          name="owner"
          type="text"
        />
      </div>
      <span>
         / 
      </span>
      <div
        className="emotion-4 emotion-3"
      >
        <label
          htmlFor="name"
        >
          Repository name
        </label>
        <input
          id="name"
          name="name"
          type="text"
        />
      </div>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <label
        htmlFor="description"
      >
        Description (optional)
      </label>
      <input
        id="description"
        name="description"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
      />
    </div>
    <hr />
    <div
      className="emotion-2 emotion-3"
    >
      <label>
        <input
          name="public"
          type="radio"
          value="true"
        />
        Public
      </label>
      <p
        className="emotion-0 emotion-1"
      >
        Anyone can see this repository. You choose who can commit.
      </p>
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      <label>
        <input
          name="public"
          type="radio"
          value="false"
        />
        Private
      </label>
      <p
        className="emotion-0 emotion-1"
      >
        You choose who can see and commit to this repository.
      </p>
    </div>
    <hr />
    <button
      className="emotion-16 emotion-17"
    >
      Create repository
    </button>
  </form>
</div>
`;

exports[`Storyshots Repository/Branches with default 1`] = `
.emotion-1 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1 li {
  padding: 12px 0;
}

.emotion-1 li + li {
  border-top: 1px solid #f1f1f1;
}

.emotion-3 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-0 {
  padding: 12px;
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.emotion-2 {
  padding: 12px;
  background-color: #fff;
}

.emotion-2 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-2 > table > tbody > tr:first-of-type td {
  border: none;
}

.emotion-2 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

<div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-0"
    >
      Default branch
    </div>
    <div
      className="emotion-2"
    >
      <ul
        className="emotion-1"
      >
        <li>
          <a
            href="/$OWNER/$REPO/tree/"
          >
            
          </a>
            Updated
           
          <time-ago
            datetime=""
          />
           by 
          <a
            href="/"
          >
            
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-0"
    >
      Active branches
    </div>
    <div
      className="emotion-2"
    >
      <ul
        className="emotion-1"
      >
        <li>
          <a
            href="/$OWNER/$REPO/tree/$BRANCH"
          >
            $BRANCH
          </a>
            Updated 
          <time-ago
            datetime="$DATE"
          />
           
          by 
          <a
            href="/$AUTHOR"
          >
            $AUTHOR
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Commit with default 1`] = `
.emotion-4 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-11 {
  padding: 12px;
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.emotion-3 {
  padding: 12px;
  background-color: #fff;
}

.emotion-3 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-3 > table > tbody > tr:first-of-type td {
  border: none;
}

.emotion-3 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-2 {
  padding: 12px;
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.emotion-0 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 a,
.emotion-9 button,
.emotion-9 input[type='submit'] {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-9 >:first-child a,
.emotion-9 >:first-child button,
.emotion-9 >:first-child input[type='submit'] {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-9 > a:first-child,
.emotion-9 > button:first-child,
.emotion-9 > input[type='submit']:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-9 >:last-child a,
.emotion-9 >:last-child button,
.emotion-9 >:last-child input[type='submit'] {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-9 > a:last-child,
.emotion-9 > button:last-child,
.emotion-9 > input[type='submit']:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-5 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-16 {
  margin: 0;
}

.emotion-12 {
  float: left;
  min-width: 48px;
  padding: 0.5em;
  margin: 0;
  list-style: none;
  font-size: 12px;
  line-height: 18px;
  color: rgba(0,0,0,0.3);
  text-align: right;
  border-right: 1px solid #eee;
}

.emotion-14 {
  background-color: white;
}

<div>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <h1
          style={
            Object {
              "color": "#213f4d",
              "fontSize": "18px",
              "fontWeight": "bold",
              "margin": "0",
            }
          }
        >
          $MESSAGE
        </h1>
        <a
          className="emotion-0 emotion-1"
          href="/$OWNER/$REPO/tree/$SHA"
          style={
            Object {
              "float": "right",
            }
          }
        >
          Browse files
        </a>
      </div>
      <div
        style={
          Object {
            "color": "#818c90",
            "fontSize": "12px",
            "margin": "0",
            "minHeight": "18px",
          }
        }
      >
        <i
          className="fa fa-code-fork"
        />
         master
      </div>
    </div>
    <div
      className="emotion-3"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          <img
            alt="$NAME"
            style={
              Object {
                "background": "#ccc",
                "height": 20,
                "verticalAlign": "middle",
                "width": 20,
              }
            }
          />
           
          $NAME
           commited on
           
          <time-ago
            datetime="$DATE"
          />
        </div>
        <div
          style={
            Object {
              "color": "#767676",
              "fontFamily": "Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
              "fontSize": "12px",
              "lineHeight": "24px",
            }
          }
        >
          <span
            style={
              Object {
                "marginRight": "12px",
              }
            }
          >
            0
             parent
          </span>
          <span>
            commit 
            $SHA
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <i
        className="fa fa-file-text-o"
      />
       Showing N changed file with N addition and N deletion.
    </div>
    <div>
      <div
        className="emotion-9 emotion-10"
      >
        <button
          className="emotion-5 emotion-1"
        >
          Unified
        </button>
        <button
          className="emotion-5 emotion-1"
        >
          Split
        </button>
      </div>
    </div>
  </div>
  <div
    id="patches"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-11"
      >
        $FILENAME
      </div>
      <div
        className="emotion-3"
      >
        <pre
          className="emotion-16 emotion-17"
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <ul
            className="emotion-12 emotion-13"
          >
            <li>
              ...
            </li>
            <li>
              1
            </li>
            <li>
              2
            </li>
            <li>
              3
            </li>
            <li>
              4
            </li>
            <li>
              5
            </li>
            <li>
              6
            </li>
            <li>
              7
            </li>
            <li>
              8
            </li>
            <li>
              9
            </li>
            <li>
              10
            </li>
            <li>
              11
            </li>
          </ul>
          <code
            className="hljs emotion-14 emotion-15"
            dangerouslySetInnerHTML={
              Object {
                "__html": "$PATCH",
              }
            }
          />
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Commits with default 1`] = `
.emotion-3 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 a,
.emotion-7 button,
.emotion-7 input[type='submit'] {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-7 >:first-child a,
.emotion-7 >:first-child button,
.emotion-7 >:first-child input[type='submit'] {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-7 > a:first-child,
.emotion-7 > button:first-child,
.emotion-7 > input[type='submit']:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-7 >:last-child a,
.emotion-7 >:last-child button,
.emotion-7 >:last-child input[type='submit'] {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-7 > a:last-child,
.emotion-7 > button:last-child,
.emotion-7 > input[type='submit']:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-26 {
  padding: 0;
  margin: 0;
  list-style: none;
  border-right: 1px solid #eee;
  border-bottom: 1px solid #eee;
  border-left: 1px solid #eee;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  border-top: 1px solid #eee;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 15px;
  font-weight: bold;
  color: #333;
}

.emotion-1 {
  font-weight: normal;
  color: #767676;
}

<ul
  className="emotion-26"
>
  <li
    className="emotion-12"
  >
    <div
      className="emotion-2"
    >
      <div>
        <div
          className="emotion-0"
        >
          $MESSAGE_1
        </div>
        <div
          className="emotion-1"
        >
          <a
            href="/$NAME_1}"
            onClick={[Function]}
          >
            <img
              alt=""
              src=""
            />
          </a>
          $NAME_1
           commited on
           
          <time-ago
            datetime="$DATE_1"
          />
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-7 emotion-8"
      >
        <button
          className="emotion-3 emotion-4"
        >
          <i
            className="fa fa-clipboard"
          />
        </button>
        <a
          as={[Function]}
          className="emotion-3 emotion-4"
          href="/$OWNER/$REPO/commit/$SHA_1"
          onClick={[Function]}
          small="true"
          transparent="true"
        >
          $SHA_1
        </a>
      </div>
      <a
        as={[Function]}
        className="emotion-3 emotion-4"
        href="/$OWNER/$REPO/tree/$SHA_1"
        onClick={[Function]}
        small="true"
        style={
          Object {
            "marginLeft": "12px",
          }
        }
        transparent="true"
      >
        <i
          className="fa fa-code"
        />
      </a>
    </div>
  </li>
  <li
    className="emotion-12"
  >
    <div
      className="emotion-2"
    >
      <div>
        <div
          className="emotion-0"
        >
          $MESSAGE_2
        </div>
        <div
          className="emotion-1"
        >
          <a
            href="/$NAME_2}"
            onClick={[Function]}
          >
            <img
              alt=""
              src=""
            />
          </a>
          $NAME_2
           commited on
           
          <time-ago
            datetime="$DATE_2"
          />
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-7 emotion-8"
      >
        <button
          className="emotion-3 emotion-4"
        >
          <i
            className="fa fa-clipboard"
          />
        </button>
        <a
          as={[Function]}
          className="emotion-3 emotion-4"
          href="/$OWNER/$REPO/commit/$SHA_2"
          onClick={[Function]}
          small="true"
          transparent="true"
        >
          $SHA_2
        </a>
      </div>
      <a
        as={[Function]}
        className="emotion-3 emotion-4"
        href="/$OWNER/$REPO/tree/$SHA_2"
        onClick={[Function]}
        small="true"
        style={
          Object {
            "marginLeft": "12px",
          }
        }
        transparent="true"
      >
        <i
          className="fa fa-code"
        />
      </a>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Repository/FileContent with default 1`] = `
.emotion-2 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-11 {
  padding: 12px;
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.emotion-1 {
  padding: 12px;
  background-color: #fff;
}

.emotion-1 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-1 > table > tbody > tr:first-of-type td {
  border: none;
}

.emotion-1 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-0 {
  padding: 12px;
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.emotion-9 a,
.emotion-9 button,
.emotion-9 input[type='submit'] {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-9 >:first-child a,
.emotion-9 >:first-child button,
.emotion-9 >:first-child input[type='submit'] {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-9 > a:first-child,
.emotion-9 > button:first-child,
.emotion-9 > input[type='submit']:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-9 >:last-child a,
.emotion-9 >:last-child button,
.emotion-9 >:last-child input[type='submit'] {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-9 > a:last-child,
.emotion-9 > button:last-child,
.emotion-9 > input[type='submit']:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-3 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-16 {
  margin: 0;
}

.emotion-12 {
  float: left;
  min-width: 48px;
  padding: 0.5em;
  margin: 0;
  list-style: none;
  font-size: 12px;
  line-height: 18px;
  color: rgba(0,0,0,0.3);
  text-align: right;
  border-right: 1px solid #eee;
}

.emotion-14 {
  background-color: white;
}

<div>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      commit tease
    </div>
    <div
      className="emotion-1"
    >
      <button>
        2
         contributors
      </button>
      <a
        href="/$CONTRIBUTOR_1"
        onClick={[Function]}
      >
        <img
          alt="$CONTRIBUTOR_1"
          style={
            Object {
              "background": "#ccc",
              "height": 20,
              "verticalAlign": "middle",
              "width": 20,
            }
          }
        />
      </a>
      <a
        href="/$CONTRIBUTOR_2"
        onClick={[Function]}
      >
        <img
          alt="$CONTRIBUTOR_2"
          style={
            Object {
              "background": "#ccc",
              "height": 20,
              "verticalAlign": "middle",
              "width": 20,
            }
          }
        />
      </a>
    </div>
  </div>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-11"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          1
           line | 
          10
           bytes
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="emotion-9 emotion-10"
          >
            <a
              as={[Function]}
              className="emotion-3 emotion-4"
              href="/{params.owner}/$REPO/raw/$BRANCH/$PATH"
              onClick={[Function]}
              small="true"
            >
              Raw
            </a>
            <a
              as={[Function]}
              className="emotion-3 emotion-4"
              href="/$OWNER/$REPO/blame/$BRANCH/$PATH"
              onClick={[Function]}
              small="true"
            >
              Blame
            </a>
            <a
              as={[Function]}
              className="emotion-3 emotion-4"
              href="/$OWNER/$REPO/commits/$BRANCH/$PATH"
              onClick={[Function]}
              small="true"
            >
              History
            </a>
          </div>
          <button
            style={
              Object {
                "margin": "0 6px",
              }
            }
          >
            <i
              className="fa fa-pencil"
            />
          </button>
          <button>
            <i
              className="fa fa-trash"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <pre
        className="emotion-16 emotion-17"
      >
        <ul
          className="emotion-12 emotion-13"
        >
          <li>
            1
          </li>
        </ul>
        <code
          className="hljs emotion-14 emotion-15"
          dangerouslySetInnerHTML={
            Object {
              "__html": "$CONTENT",
            }
          }
          id="content"
        />
      </pre>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Graphs with default 1`] = `
<div>
  <h2>
    graphs
  </h2>
</div>
`;

exports[`Storyshots Repository/Issues with default 1`] = `
.emotion-9 a,
.emotion-9 button,
.emotion-9 input[type='submit'] {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-9 >:first-child a,
.emotion-9 >:first-child button,
.emotion-9 >:first-child input[type='submit'] {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-9 > a:first-child,
.emotion-9 > button:first-child,
.emotion-9 > input[type='submit']:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-9 >:last-child a,
.emotion-9 >:last-child button,
.emotion-9 >:last-child input[type='submit'] {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-9 > a:last-child,
.emotion-9 > button:last-child,
.emotion-9 > input[type='submit']:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-11 > * {
  display: inline-block;
  margin-right: 12px;
}

.emotion-4 {
  display: inline-block;
}

.emotion-0 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 6px 10px;
  border-radius: 3px 0 0 3px;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3 {
  margin-left: -1px;
  position: relative;
  display: inline-block;
}

.emotion-3 > i {
  position: absolute;
  top: 10px;
  left: 6px;
}

.emotion-2 {
  width: 320px;
  padding: 6px 10px 6px 32px;
  color: #767676;
  border: 1px solid #d5d5d5;
  border-radius: 0 3px 3px 0;
  line-height: 20px;
}

.emotion-5 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  padding: 6px 12px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 14px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  position: relative;
  padding: 12px 12px;
  margin-top: 20px;
  background-color: #f8f8f8;
  border: 1px solid #e5e5e5;
  border-radius: 3px 3px 0 0;
}

.emotion-12 > * {
  display: inline-block;
  margin-right: 12px;
}

.emotion-25 {
  list-style: none;
  padding: 0;
  margin: 0;
  border-right: 1px solid #eee;
  border-bottom: 1px solid #eee;
  border-left: 1px solid #eee;
}

.emotion-18 {
  padding: 12px 12px;
  border-top: 1px solid #eee;
}

.emotion-18:first-of-type {
  border-top: none;
}

.emotion-18:after {
  content: ' ';
  display: table;
  clear: both;
}

.emotion-13 {
  float: left;
  color: #6cc644;
}

.emotion-16 {
  float: left;
  margin-left: 12px;
}

.emotion-14 {
  color: #333;
  font-size: 16px;
}

.emotion-15 {
  font-size: 12px;
}

.emotion-17 {
  float: right;
}

<div>
  <div
    className="emotion-11"
  >
    <div
      className="emotion-4"
    >
      <button
        className="emotion-0 emotion-1"
      >
        Filters
      </button>
      <form
        className="emotion-3"
      >
        <i
          className="fa fa-search"
        />
        <input
          className="emotion-2"
        />
      </form>
    </div>
    <div
      className="emotion-9 emotion-10"
    >
      <a
        as={[Function]}
        className="emotion-5 emotion-1"
        href="/$OWNER/$REPO/labels"
        onClick={[Function]}
        transparent="true"
      >
        Labels
      </a>
      <a
        as={[Function]}
        className="emotion-5 emotion-1"
        href="/$OWNER/$REPO/milestones"
        onClick={[Function]}
        transparent="true"
      >
        Milestones
      </a>
    </div>
  </div>
  <div
    className="emotion-12"
  >
    <div>
      <a
        href="/$OWNER/$REPO/issues?q=is:open is:issue"
        onClick={[Function]}
      >
        <i
          className="fa fa-exclamation-circle"
        />
         
        2
         Open
      </a>
    </div>
    <div>
      <a
        href="/$OWNER/$REPO/issues?q=is:closed is:issue"
        onClick={[Function]}
      >
        <i
          className="fa fa-check"
        />
         
        -1
         Closed
      </a>
    </div>
  </div>
  <ul
    className="emotion-25"
  >
    <li
      className="emotion-18"
    >
      <div
        className="emotion-13"
      >
        <i
          className="fa fa-exclamation-circle"
        />
      </div>
      <div
        className="emotion-16"
      >
        <div
          className="emotion-14"
        >
          <a
            href="/$OWNER/$REPO/issues/1"
            onClick={[Function]}
          >
            $TITLE_1
          </a>
        </div>
        <div
          className="emotion-15"
        >
          <span>
            #
            1
          </span>
           opened
           
          <time-ago
            datetime="$CREATED_AT_1"
          />
           by
           
          <a
            href="/$CREATED_BY_1"
            onClick={[Function]}
          >
            $CREATED_BY_1
          </a>
        </div>
      </div>
      <div
        className="emotion-17"
      >
        <div>
          <a
            href="/$OWNER/$REPO/issues/1"
            onClick={[Function]}
          >
            <i
              className="fa fa-comment-o"
            />
             
            1
          </a>
        </div>
      </div>
    </li>
    <li
      className="emotion-18"
    >
      <div
        className="emotion-13"
      >
        <i
          className="fa fa-exclamation-circle"
        />
      </div>
      <div
        className="emotion-16"
      >
        <div
          className="emotion-14"
        >
          <a
            href="/$OWNER/$REPO/issues/2"
            onClick={[Function]}
          >
            $TITLE_2
          </a>
        </div>
        <div
          className="emotion-15"
        >
          <span>
            #
            2
          </span>
           opened
           
          <time-ago
            datetime="$CREATED_AT_2"
          />
           by
           
          <a
            href="/$CREATED_BY_2"
            onClick={[Function]}
          >
            $CREATED_BY_2
          </a>
        </div>
      </div>
      <div
        className="emotion-17"
      >
        <div>
          <a
            href="/$OWNER/$REPO/issues/2"
            onClick={[Function]}
          >
            <i
              className="fa fa-comment-o"
            />
             
            2
          </a>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Repository/Milestones with default 1`] = `
<div>
  <h2>
    milestones
  </h2>
</div>
`;

exports[`Storyshots Repository/Projects with default 1`] = `
<div>
  <h2>
    projects
  </h2>
</div>
`;

exports[`Storyshots Repository/Pulse with default 1`] = `
<div>
  <h2>
    pulse
  </h2>
</div>
`;

exports[`Storyshots Repository/Settings with default 1`] = `
<div>
  <h2>
    settings
  </h2>
</div>
`;

exports[`Storyshots Repository/Tree with default 1`] = `
.emotion-17 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-16 {
  padding: 0;
  background-color: #fff;
}

.emotion-16 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-16 > table > tbody > tr:first-of-type td {
  border: none;
}

.emotion-16 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-3 {
  padding: 12px;
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.emotion-0 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  font-family: Consolas,'Liberation Mono',Menlo,Courier,monospace;
  font-size: 90%;
  color: #445055;
}

.emotion-5 {
  width: 18px;
}

.emotion-4 {
  padding-left: 12px;
}

.emotion-6 {
  color: #888;
}

.emotion-9 {
  width: 120px;
  text-align: right;
}

.emotion-8 {
  padding-right: 12px;
}

<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "marginBottom": "12px",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "12px",
        }
      }
    >
      <button
        className="emotion-0 emotion-1"
        onClick={[Function]}
      >
        <i>
          Branch: 
        </i>
        <span>
          #TREE
           
        </span>
        <i
          className="fa fa-caret-down"
        />
      </button>
    </div>
    <div>
      <strong>
        <a
          href="/#OWNER/#REPO/tree/#TREE"
          onClick={[Function]}
        >
          #REPO
        </a>
      </strong>
      <span
        style={
          Object {
            "margin": "0 6px",
          }
        }
      >
        /
      </span>
      <strong>
        #PATH
      </strong>
      <span
        style={
          Object {
            "margin": "0 6px",
          }
        }
      >
        /
      </span>
    </div>
  </div>
  <div>
    <div
      className="emotion-17"
    >
      <div
        className="emotion-3"
      >
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "space-between",
            }
          }
        >
          <div>
            <img
              alt="#NAME_1"
              syle={
                Object {
                  "background": "#ccc",
                  "height": 20,
                  "verticalAlign": "middle",
                  "width": 20,
                }
              }
            />
             
            <a
              href="/#NAME_1"
            >
              #NAME_1
            </a>
             
            <a
              href="/#OWNER/#REPO/commit/#SHA_1"
              onClick={[Function]}
            >
              #MESSAGE_1
            </a>
          </div>
          <div>
            Latest commit 
            <a
              className="emotion-2"
              href="/#OWNER/#REPO/commit/#SHA_1"
              onClick={[Function]}
            >
              #SHA_1
            </a>
             
            <time-ago
              datetime="#DATE_1"
            />
          </div>
        </div>
      </div>
      <div
        className="emotion-16"
      >
        <table>
          <tbody>
            <tr>
              <td
                className="emotion-5"
              >
                <i
                  className="fa fa-file-text-o emotion-4"
                />
              </td>
              <td
                className="name"
              >
                <a
                  href="/#OWNER/#REPO/blob/#TREE/#PATH/#PATH_1"
                  onClick={[Function]}
                >
                  #PATH_1
                </a>
              </td>
              <td
                className="emotion-4"
              >
                <a
                  className="emotion-6"
                  href="/#OWNER/#REPO/commit/#SHA_1"
                  onClick={[Function]}
                >
                  #MESSAGE_1
                </a>
              </td>
              <td
                className="emotion-9"
              >
                <span
                  className="emotion-8"
                >
                  <time-ago
                    datetime="#DATE_1"
                  />
                </span>
              </td>
            </tr>
            <tr>
              <td
                className="emotion-5"
              >
                <i
                  className="fa fa-file-text-o emotion-4"
                />
              </td>
              <td
                className="name"
              >
                <a
                  href="/#OWNER/#REPO/blob/#TREE/#PATH/#PATH_2"
                  onClick={[Function]}
                >
                  #PATH_2
                </a>
              </td>
              <td
                className="emotion-4"
              >
                <a
                  className="emotion-6"
                  href="/#OWNER/#REPO/commit/#SHA_1"
                  onClick={[Function]}
                >
                  #MESSAGE_1
                </a>
              </td>
              <td
                className="emotion-9"
              >
                <span
                  className="emotion-8"
                >
                  <time-ago
                    datetime="#DATE_1"
                  />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Tree__Breadcrumbs with 3rd level path 1`] = `
<div>
  <strong>
    <a
      href="/foo/bar/tree/TREE"
      onClick={[Function]}
    >
      bar
    </a>
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <a
    href="/foo/bar/tree/TREE/a"
    onClick={[Function]}
  >
    a
  </a>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <a
    href="/foo/bar/tree/TREE/a/b"
    onClick={[Function]}
  >
    b
  </a>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <strong>
    c
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
</div>
`;

exports[`Storyshots Repository/Tree__Breadcrumbs with default 1`] = `
<div>
  <strong>
    <a
      href="/foo/bar/tree/TREE"
      onClick={[Function]}
    >
      bar
    </a>
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <strong>
    PATH
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
</div>
`;

exports[`Storyshots Repository/Wiki with default 1`] = `
<div>
  <h2>
    wiki
  </h2>
</div>
`;

exports[`Storyshots Repository/shared/Entries with default 1`] = `
.emotion-9 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.emotion-8 {
  padding: 0;
  background-color: #fff;
}

.emotion-8 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.emotion-8 > table > tbody > tr:first-of-type td {
  border: none;
}

.emotion-8 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.emotion-1 {
  padding: 12px;
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.emotion-0 {
  font-family: Consolas,'Liberation Mono',Menlo,Courier,monospace;
  font-size: 90%;
  color: #445055;
}

.emotion-3 {
  width: 18px;
}

.emotion-2 {
  padding-left: 12px;
}

.emotion-4 {
  color: #888;
}

.emotion-7 {
  width: 120px;
  text-align: right;
}

.emotion-6 {
  padding-right: 12px;
}

<div>
  <div
    className="emotion-9"
  >
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          <img
            alt="#NAME_1"
            syle={
              Object {
                "background": "#ccc",
                "height": 20,
                "verticalAlign": "middle",
                "width": 20,
              }
            }
          />
           
          <a
            href="/#NAME_1"
          >
            #NAME_1
          </a>
           
          <a
            href="/#OWNER/#REPO/commit/#SHA_1"
            onClick={[Function]}
          >
            #MESSAGE_1
          </a>
        </div>
        <div>
          Latest commit 
          <a
            className="emotion-0"
            href="/#OWNER/#REPO/commit/#SHA_1"
            onClick={[Function]}
          >
            #SHA_1
          </a>
           
          <time-ago
            datetime="#DATE_1"
          />
        </div>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <table>
        <tbody>
          <tr>
            <td
              className="emotion-3"
            >
              <i
                className="fa fa-file-text-o emotion-2"
              />
            </td>
            <td
              className="name"
            >
              <a
                href="/#OWNER/#REPO/blob/#TREE/#PATH/#PATH_2"
                onClick={[Function]}
              >
                #PATH_2
              </a>
            </td>
            <td
              className="emotion-2"
            >
              <a
                className="emotion-4"
                href="/#OWNER/#REPO/commit/#SHA_1"
                onClick={[Function]}
              >
                #MESSAGE_1
              </a>
            </td>
            <td
              className="emotion-7"
            >
              <span
                className="emotion-6"
              >
                <time-ago
                  datetime="#DATE_1"
                />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/shared/TreeSelector with default 1`] = `
.emotion-0 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  className="emotion-0 emotion-1"
  onClick={[Function]}
>
  <i>
    Branch: 
  </i>
  <span>
    $TREE
     
  </span>
  <i
    className="fa fa-caret-down"
  />
</button>
`;

exports[`Storyshots Repository1 part of Navigations 1`] = `
.emotion-1 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  width: 100%;
}

.emotion-0 a {
  display: block;
  padding: 7px 15px 8px;
  margin-bottom: -1px;
  color: #666;
}

.emotion-0 .selected {
  background-color: #fff;
  border-left: 1px solid #e5e5e5;
  border-top: 3px solid #d26911;
  border-right: 1px solid #e5e5e5;
}

.emotion-0 .fa {
  margin-right: 0.5em;
}

<div
  className="emotion-1 emotion-2"
>
  <nav>
    <ul
      className="emotion-0"
    >
      <li>
        <a
          className=""
          href="/$OWNER/$REPO"
          onClick={[Function]}
        >
          <i
            className="fa fa-code"
          />
          Code
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/issues"
          onClick={[Function]}
        >
          <i
            className="fa fa-exclamation-circle"
          />
          Issues 1
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/pulls"
          onClick={[Function]}
        >
          <i
            className="fa fa-code-fork"
          />
          Pull requests 2
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/projects"
          onClick={[Function]}
        >
          <i
            className="fa fa-group"
          />
          Projects 3
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/wiki"
          onClick={[Function]}
        >
          <i
            className="fa fa-book"
          />
          Wiki
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/pulse"
          onClick={[Function]}
        >
          <i
            className="fa fa-line-chart"
          />
          Pulse
        </a>
      </li>
      <li>
        <a
          className=""
          href="/$OWNER/$REPO/graphs"
          onClick={[Function]}
        >
          <i
            className="fa fa-bar-chart"
          />
          Graphs
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Storyshots Repository1 with default 1`] = `
.emotion-23 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.emotion-5 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 a,
.emotion-7 button,
.emotion-7 input[type='submit'] {
  border-right-width: 0;
  border-radius: 0;
}

.emotion-7 >:first-child a,
.emotion-7 >:first-child button,
.emotion-7 >:first-child input[type='submit'] {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-7 > a:first-child,
.emotion-7 > button:first-child,
.emotion-7 > input[type='submit']:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.emotion-7 >:last-child a,
.emotion-7 >:last-child button,
.emotion-7 >:last-child input[type='submit'] {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-7 > a:last-child,
.emotion-7 > button:last-child,
.emotion-7 > input[type='submit']:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.emotion-3 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-28 {
  margin-bottom: 24px;
  background-color: #fafafa;
  border-bottom: 1px solid #eee;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-1 {
  display: inline-block;
  color: #666;
  font-size: 18px;
}

.emotion-0 {
  margin: 0 4px;
}

.emotion-21 {
  list-style: none;
  padding: 0;
}

.emotion-21 > li {
  display: inline-block;
  margin-left: 12px;
}

.emotion-21 > li i:first-of-type {
  margin-right: 4px;
}

.emotion-2 {
  margin-left: 4px;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  width: 100%;
}

.emotion-25 a {
  display: block;
  padding: 7px 15px 8px;
  margin-bottom: -1px;
  color: #666;
}

.emotion-25 .selected {
  background-color: #fff;
  border-left: 1px solid #e5e5e5;
  border-top: 3px solid #d26911;
  border-right: 1px solid #e5e5e5;
}

.emotion-25 .fa {
  margin-right: 0.5em;
}

<div>
  <div
    className="emotion-28"
  >
    <div
      className="emotion-23 emotion-24"
    >
      <div
        className="emotion-22"
      >
        <h1
          className="emotion-1"
        >
          <a
            href="/$OWNER"
          >
            $OWNER
          </a>
          <span
            className="emotion-0"
          >
            /
          </span>
          <a
            href="/$OWNER/$REPO"
          >
            $REPO
          </a>
        </h1>
        <nav>
          <ul
            className="emotion-21"
          >
            <li>
              <div
                className="emotion-7 emotion-8"
              >
                <button
                  className="emotion-3 emotion-4"
                  onClick={[Function]}
                >
                  <i
                    className="fa fa-eye"
                  />
                  Watch
                  <i
                    className="fa fa-caret-down emotion-2"
                  />
                </button>
                <a
                  className="emotion-5 emotion-4"
                  href="#"
                >
                  -1
                </a>
              </div>
            </li>
            <li>
              <div
                className="emotion-7 emotion-8"
              >
                <button
                  className="emotion-3 emotion-4"
                >
                  <i
                    className="fa fa-star"
                  />
                  Star
                </button>
                <a
                  className="emotion-5 emotion-4"
                  href="#"
                >
                  -1
                </a>
              </div>
            </li>
            <li>
              <div
                className="emotion-7 emotion-8"
              >
                <button
                  className="emotion-3 emotion-4"
                >
                  <i
                    className="fa fa-code-fork"
                  />
                  Fork
                </button>
                <a
                  className="emotion-5 emotion-4"
                  href="#"
                >
                  -1
                </a>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <div
      className="emotion-23 emotion-24"
    >
      <nav>
        <ul
          className="emotion-25"
        >
          <li>
            <a
              className=""
              href="/$OWNER/$REPO"
              onClick={[Function]}
            >
              <i
                className="fa fa-code"
              />
              Code
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/issues"
              onClick={[Function]}
            >
              <i
                className="fa fa-exclamation-circle"
              />
              Issues -1
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/pulls"
              onClick={[Function]}
            >
              <i
                className="fa fa-code-fork"
              />
              Pull requests -1
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/projects"
              onClick={[Function]}
            >
              <i
                className="fa fa-group"
              />
              Projects -1
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/wiki"
              onClick={[Function]}
            >
              <i
                className="fa fa-book"
              />
              Wiki
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/pulse"
              onClick={[Function]}
            >
              <i
                className="fa fa-line-chart"
              />
              Pulse
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/graphs"
              onClick={[Function]}
            >
              <i
                className="fa fa-bar-chart"
              />
              Graphs
            </a>
          </li>
          <li>
            <a
              className=""
              href="/$OWNER/$REPO/settings"
              onClick={[Function]}
            >
              <i
                className="fa fa-gear"
              />
              Settings
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
  <div
    className="emotion-23 emotion-24"
  >
    children
  </div>
</div>
`;
